[package]
name = "common-expression-language"
description = "A Rust implementation of the Common Expression Language (CEL)"
repository = "https://github.com/orf/cel-rust"
version = "0.1.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"

[dependencies]
lalrpop-util = "0.19.0"
regex = "1"

[build-dependencies]
lalrpop = {version="0.19.0", features = ["lexer"] }

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "parsing"
harness = false

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
