[package]
name = "cel-antlr-parser"
description = "An antlr-based parser for the Common Expression Language (CEL)"
repository = "https://github.com/clarkmcc/cel-rust"
version = "0.1.0"
authors = ["Alex Snaps <alex@wcgw.dev>"]
edition = "2021"
license = "MIT"
categories = ["parsing"]

[dependencies]
antlr4rust = "0.3.0-beta"
better_any = { version = "0.2.0-dev.1", features = ["derive"] }
lazy_static = "1.5.0"
uuid = "=0.8.*"
byteorder = "^1"
murmur3 = "=0.4" # 0.5 is incompatible currently
bit-set = "=0.5.*"
once_cell = "^1.2"
#backtrace = "=0.3"
typed-arena = "^2.0"
#better_any = "=0.1"
parking_lot = "0.11"
