[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cel-interpreter = { path = "../interpreter" }
chrono = "0.4.26"
serde = { version = "1.0.196", features = ["derive"] }

[[bin]]
name = "simple"
path = "src/simple.rs"

[[bin]]
name = "variables"
path = "src/variables.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "threads"
path = "src/threads.rs"

[[bin]]
name = "serde"
path = "src/serde.rs"
