[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
cel-interpreter = { path = "../interpreter" }
chrono = "0.4.26"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = { version = "1.0.61", default-features = false }
tokio = { version = "1.38.0", default-features = false, features = [
    "macros",
    "net",
    "rt-multi-thread",
] }

[[bin]]
name = "simple"
path = "src/simple.rs"

[[bin]]
name = "variables"
path = "src/variables.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "threads"
path = "src/threads.rs"

[[bin]]
name = "serde"
path = "src/serde.rs"

[[bin]]
name = "axum"
path = "src/axum.rs"
