[package]
name = "example"
version = "0.1.0"
edition = "2021"

[features]
axum = ["dep:axum", "dep:tokio", "dep:thiserror"]
json = ["dep:serde_json", "cel-interpreter/json"]
chrono = ["dep:chrono", "cel-interpreter/chrono"]

[dependencies]
cel-interpreter = { path = "../interpreter", default-features = false }

chrono = { version = "0.4", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

axum = { version = "0.7.5", default-features = false, features = [
    "http1",
    "json",
    "tokio",
], optional = true }
tokio = { version = "1.38.0", default-features = false, features = [
    "macros",
    "net",
    "rt-multi-thread",
], optional = true }
thiserror = { version = "1.0", optional = true }

[[bin]]
name = "example-simple"
path = "src/simple.rs"

[[bin]]
name = "example-variables"
path = "src/variables.rs"

[[bin]]
name = "example-functions"
path = "src/functions.rs"
required-features = ["chrono"]

[[bin]]
name = "example-threads"
path = "src/threads.rs"

[[bin]]
name = "example-serde"
path = "src/serde.rs"

[[bin]]
name = "example-axum"
path = "src/axum.rs"
required-features = ["axum"]

[[bin]]
name = "example-json"
path = "src/json.rs"
required-features = ["json"]
