[package]
name = "cel-interpreter"
description = "An interpreter for the Common Expression Language (CEL)"
repository = "https://github.com/clarkmcc/cel-rust"
version = "0.5.0"
authors = ["Tom Forbes <tom@tomforb.es>", "Clark McCauley <me@clarkmccauley.com>"]
edition = "2018"
license = "MIT"
categories = ["interpreter", "cel"]

[dependencies]
cel-parser = { path = "../parser", version = "0.6.0" }
thiserror = "1.0.40"
chrono = "0.4.26"
nom = "7.1.3"
paste = "1.0.14"
serde = "1.0.196"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serde_bytes = "0.11.14"

[[bench]]
name = "runtime"
harness = false
