[package]
name = "cel-interpreter"
description = "An interpreter for the Common Expression Language (CEL)"
repository = "https://github.com/clarkmcc/cel-rust"
version = "0.8.1"
authors = ["Tom Forbes <tom@tomforb.es>", "Clark McCauley <me@clarkmccauley.com>"]
edition = "2021"
license = "MIT"
categories = ["compilers"]

[dependencies]
cel-parser = { path = "../parser", version = "0.7.1 " }
thiserror = "1.0.40"
chrono = { version = "0.4.26", default-features = false, features = ["alloc"] }
nom = "7.1.3"
paste = "1.0.14"
serde = "1.0.196"
regex = "1.10.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serde_bytes = "0.11.14"

[[bench]]
name = "runtime"
harness = false
