[package]
name = "cel-interpreter"
description = "An interpreter for the Common Expression Language (CEL)"
repository = "https://github.com/clarkmcc/cel-rust"
version = "0.9.0"
authors = ["Tom Forbes <tom@tomforb.es>", "Clark McCauley <me@clarkmccauley.com>"]
edition = "2021"
license = "MIT"
categories = ["compilers"]

[dependencies]
cel-parser = { path = "../parser", version = "0.8.0" }

nom = "7.1.3"

chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"], optional = true }
regex = { version = "1.10.5", optional = true }
serde = "1.0"
serde_json = { version = "1.0", optional = true }
base64 = { version = "0.22.1", optional = true }

thiserror = "1.0"
paste = "1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serde_bytes = "0.11.14"

[[bench]]
name = "runtime"
harness = false

[features]
default = ["regex", "chrono"]
json = ["dep:serde_json", "dep:base64"]
regex = ["dep:regex"]
chrono = ["dep:chrono"]
