[package]
name = "cel-parser"
description = "A parser for the Common Expression Language (CEL)"
repository = "https://github.com/clarkmcc/cel-rust"
version = "0.7.0"
authors = ["Tom Forbes <tom@tomforb.es>", "Clark McCauley <me@clarkmccauley.com>"]
edition = "2018"
license = "MIT"
categories = ["parsing"]

[dependencies]
lalrpop-util = { version = "0.19.1", features = ["lexer"] }
regex = "1.4.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }

[[bench]]
name = "runtime"
harness = false