[package]
name = "cel-parser"
description = "A parser for the Common Expression Language (CEL)"
repository = "https://github.com/clarkmcc/cel-rust"
version = "0.8.0"
authors = ["Tom Forbes <tom@tomforb.es>", "Clark McCauley <me@clarkmccauley.com>"]
edition = "2021"
license = "MIT"
categories = ["parsing"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
lalrpop-util = { version = "0.22.0", features = ["lexer"] }
regex = "1.4.2"
serde = { version = "1.0.215", features = ["derive", "rc"], optional = true }
thiserror = "1.0.40"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[build-dependencies]
lalrpop = { version = "0.22.0", features = ["lexer"] }

[[bench]]
name = "runtime"
harness = false
